support new version of  xxl-job service  >= 2.1.0

--- a/samples/ASPNetCoreExecutor/appsettings.json
+++ b/samples/ASPNetCoreExecutor/appsettings.json
@@ -1,16 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information"
     }
   },
   "xxlJob": {
-    "adminAddresses":"http://127.0.0.1:8080",
-    "appName": "xxl-job-executor-dotnet",
-    "specialBindAddress": "127.0.0.1",
-    "port": 5000,
-    "autoRegistry":false,
-    "accessToken": "",   
+    "adminAddresses": "http://localhost:6543/xxl-job-admin",
+    "appName": "xxl-job-executor-sample",
+    "specialBindAddress": "localhost",
+    "port": 60088,
+    "autoRegistry": true,
+    "accessToken": "",
     "logRetentionDays": 30
   }
  
